; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/ec/extr_ec_ameth.c_eckey_pub_decode.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/ec/extr_ec_ameth.c_eckey_pub_decode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EC_F_ECKEY_PUB_DECODE = common dso_local global i32 0, align 4
@ERR_R_EC_LIB = common dso_local global i32 0, align 4
@EC_R_DECODE_ERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @eckey_pub_decode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @eckey_pub_decode(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8* null, i8** %6, align 8
  store i32* null, i32** %10, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @X509_PUBKEY_get0_param(i32* null, i8** %6, i32* %9, i32** %11, i32* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %43

16:                                               ; preds = %2
  %17 = load i32*, i32** %11, align 8
  %18 = call i32 @X509_ALGOR_get0(i32* null, i32* %8, i8** %7, i32* %17)
  %19 = load i32, i32* %8, align 4
  %20 = load i8*, i8** %7, align 8
  %21 = call i32* @eckey_type2param(i32 %19, i8* %20)
  store i32* %21, i32** %10, align 8
  %22 = load i32*, i32** %10, align 8
  %23 = icmp ne i32* %22, null
  br i1 %23, label %28, label %24

24:                                               ; preds = %16
  %25 = load i32, i32* @EC_F_ECKEY_PUB_DECODE, align 4
  %26 = load i32, i32* @ERR_R_EC_LIB, align 4
  %27 = call i32 @ECerr(i32 %25, i32 %26)
  store i32 0, i32* %3, align 4
  br label %43

28:                                               ; preds = %16
  %29 = load i32, i32* %9, align 4
  %30 = call i32 @o2i_ECPublicKey(i32** %10, i8** %6, i32 %29)
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %36, label %32

32:                                               ; preds = %28
  %33 = load i32, i32* @EC_F_ECKEY_PUB_DECODE, align 4
  %34 = load i32, i32* @EC_R_DECODE_ERROR, align 4
  %35 = call i32 @ECerr(i32 %33, i32 %34)
  br label %40

36:                                               ; preds = %28
  %37 = load i32*, i32** %4, align 8
  %38 = load i32*, i32** %10, align 8
  %39 = call i32 @EVP_PKEY_assign_EC_KEY(i32* %37, i32* %38)
  store i32 1, i32* %3, align 4
  br label %43

40:                                               ; preds = %32
  %41 = load i32*, i32** %10, align 8
  %42 = call i32 @EC_KEY_free(i32* %41)
  store i32 0, i32* %3, align 4
  br label %43

43:                                               ; preds = %40, %36, %24, %15
  %44 = load i32, i32* %3, align 4
  ret i32 %44
}

declare dso_local i32 @X509_PUBKEY_get0_param(i32*, i8**, i32*, i32**, i32*) #1

declare dso_local i32 @X509_ALGOR_get0(i32*, i32*, i8**, i32*) #1

declare dso_local i32* @eckey_type2param(i32, i8*) #1

declare dso_local i32 @ECerr(i32, i32) #1

declare dso_local i32 @o2i_ECPublicKey(i32**, i8**, i32) #1

declare dso_local i32 @EVP_PKEY_assign_EC_KEY(i32*, i32*) #1

declare dso_local i32 @EC_KEY_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
